V0.0.1.24:
- Added "View Count" to TV-Shows in Basic Mode
- Added "Last Viewed" to TV-Shows in Basic Mode
- HUGE speed increase, when exporting TV-Shows when running Extended mode or above
- Changed fieldname "Watched" in Movie export to "View Count"
- Added "Last Viewed" to Movies in Basic mode

V0.0.1.23:
- Found out, that I wasn't following my own milestones regarding versioning....Hehehe.....Version now bumped to 0.0.1.23
- Moved away from Plex framework for Movies, since the framework breaks, if mandentory data is missing
- HUGE speed inprovement when generating output for movies, and running Extended mode or above
- Added Watched status to Basic level and above for movies

V0.0.0.22:
- Improved on logging
- Added list of admin locked fields to "Extend" mode for TV-Shows
- Added count of extras for TV-Shows to "Extend" mode
- Added "Episode Sort Title" to "Basic" mode for TV-Shows
- Added list of admin locked fields to "Basic" mode for Movies
- Added count of extras for Movies to "Basic" mode
- Added "Sort title" to "Simple" mode for Movies

V0.0.0.21:
- Made an error, since I left some debug console printing in the code, that could cause the plug-in to fail

V0.0.0.20:
- Fixed issue 27: Added delimiter to the preferences, allowing user to specify which caracter to be used as field seperator
- Added a forced quote for fields when exporting
- Fixed issue 28: Section containing invalid caracters will not save

V0.0.0.19:
- Fixed a bug if a field was containing a CR, LF or CRLF caracters, since that would break the output

V0.0.0.18:
- Fixed a bug if timestam was missing
- Added algorithm so when exporting media or part info, it would only
  skip to a new line, if more than 1 item was present
- Added export level to the exported filename

V0.0.0.17:
- Added Extreme level to TV-Seris
-- This level was formerly known as the extended level
-- The Extended level now instead adds resolution info etc. about a show

V0.0.0.16:
- Added Extended level to TV-Series