@@ -4,6 +4,9 @@ V0.0.1.24:
 - HUGE speed increase, when exporting TV-Shows when running Extended mode or above
 - Changed fieldname "Watched" in Movie export to "View Count"
 - Added "Last Viewed" to Movies in Basic mode
+- Moved away from Plex Channel framework for grapping sections and episodes, and instead use native Python calls
+- Speed increase when calculating amount of extras for Movies
+- Fixed so extras doesn't mess up the part information for movies in level Extreme2
 
 V0.0.1.23:
 - Found out, that I wasn't following my own milestones regarding versioning....Hehehe.....Version now bumped to 0.0.1.23
